--- a/pagina2.html
+++ b/pagina2.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nuevo documento</title>
+    <title>2 pagina</title>
 </head>
 <body>
-    <h1>pagina 1</h1>
+    <h1>segunda pagina</h1>
 </body>
 </html>
