arreglo en css y pagina 1 y 2

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_page.css">
     <title>nuevo documento</title>
 </head>
 <body>
     <h1>pagina 1</h1>
+    <p>Practicando con GIT</p>
+    <a href="pagina2.html"><input type="button" value ="Pagina2"></a>
 </body>
 </html>
