--- a/pagina2.html
+++ b/pagina2.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_page.css">
     <title>2 pagina</title>
+    
 </head>
 <body>
     <h1>segunda pagina</h1>
+    <p>curso de Git . prueba</p>
+    <a href="index.html"><input type="button" value ="volver"></a>
 </body>
 </html>
