añadido parrafo 1 y cambio css

--- a/pagina2.html
+++ b/pagina2.html
@@ -10,6 +10,6 @@
 <body>
     <h1>segunda pagina</h1>
     <p>curso de Git . prueba</p>
-    <a href="index.html"><input type="button" value ="volver"></a>
+    <a href="index.html"><input type="button" value ="volver" class="button"></a>
 </body>
 </html>
