--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>pagina 1</h1>
     <p>Practicando con GIT</p>
-    <a href="pagina2.html"><input type="button" value ="Pagina2"></a>
+    <a href="pagina2.html"><input type="button" value ="Pagina2" class="button"></a>
 </body>
 </html>
